# sample-meshcore-through-cmake-fetchcontent

./: CMakeLists.txt  main.cpp
